TMA-1297 Fix interests field form display on small screens
Was due to a misresolved merge conflict

--- a/app/Resources/assets/sass/site/components/project/_single.scss
+++ b/app/Resources/assets/sass/site/components/project/_single.scss
@@ -684,33 +684,6 @@ a#{$js-project-single-map-toggle} {
   }
 
   // Responsive bids confirmation form columns
-  @include devices('md', 'lg') {
-    .col-label,
-    .col-input {
-      box-sizing: border-box;
-      float: left;
-      width: 50%;
-    }
-
-    .col-label {
-      text-align: right;
-      padding-right: 15px;
-
-      label {
-        display: block;
-        padding-top: 10px;
-      }
-    }
-
-    // Poke the arrow on the right hand side
-    .ui-formvalidation-messages:after {
-      left: auto;
-      right: 0;
-      margin-right: 15px;
-    }
-  }
-
-  // Responsive bids confirmation form columns
   @include devices('lg') {
     .col-label,
     .col-input {
